# wslASR

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  api.py  asr.py  audio.py  diarization.py  diarization_merge.py  exports.py  main.py  storage.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_asr_timestamps.py  test_chunking.py  test_diarization_merge.py  test_exports.py  test_ground_truth_local.py  test_models_e2e.py
